force-app/main/default/objects/Metadata_Component__c.object
<CustomObject>
    <description>Salesforce metadata components created in your org and managed for your project.</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Kind of metadata (e.g. custom object, standard object, managed package object).</description>
        <inlineHelpText>Kind of metadata (e.g. custom object, standard object, managed package object).</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Managed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this metadata component has been deleted in the org and won&apos;t show up in various lists of components the user still needs to actively work with.</description>
        <inlineHelpText>If checked, this metadata component has been deleted in the org and won&apos;t show up in various lists of components the user still needs to actively work with.</inlineHelpText>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metadata_Type__c</fullName>
        <description>Component&apos;s Salesforce metadata type.</description>
        <inlineHelpText>Component&apos;s Salesforce metadata type.</inlineHelpText>
        <label>Metadata Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>AI Application</fullName>
                </value>
                <value>
                    <fullName>AI Application config</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Action Link Group Template</fullName>
                </value>
                <value>
                    <fullName>Allow URL for Redirects</fullName>
                </value>
                <value>
                    <fullName>Apex Class</fullName>
                </value>
                <value>
                    <fullName>Apex Sharing Reason</fullName>
                </value>
                <value>
                    <fullName>Apex Trigger</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Asset File</fullName>
                </value>
                <value>
                    <fullName>Assignment Rule</fullName>
                </value>
                <value>
                    <fullName>Assistant Recommendation Type</fullName>
                </value>
                <value>
                    <fullName>Aura Component Bundle</fullName>
                </value>
                <value>
                    <fullName>Auth. Provider</fullName>
                </value>
                <value>
                    <fullName>Auto-Response Rule</fullName>
                </value>
                <value>
                    <fullName>Briefcase Definition</fullName>
                </value>
                <value>
                    <fullName>Bucket [pmdm]</fullName>
                </value>
                <value>
                    <fullName>Bucketed Field [pmdm]</fullName>
                </value>
                <value>
                    <fullName>Bucketed Value [pmdm]</fullName>
                </value>
                <value>
                    <fullName>Button or Link</fullName>
                </value>
                <value>
                    <fullName>CORS Allowed Origin List</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Channel Menu Deployment</fullName>
                </value>
                <value>
                    <fullName>Classic Letterhead</fullName>
                </value>
                <value>
                    <fullName>Communication Channel Layout</fullName>
                </value>
                <value>
                    <fullName>Compact Layout</fullName>
                </value>
                <value>
                    <fullName>Content Security Policy Trusted Site</fullName>
                </value>
                <value>
                    <fullName>Custom Console Component</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Metadata_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Metadata Component</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or is not a metadata component available in this project.</errorMessage>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Metadata_Component__c</referenceTo>
        <relationshipLabel>Child Metadata Components</relationshipLabel>
        <relationshipName>Child_Metadata_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Metadata Components</relationshipLabel>
        <relationshipName>Metadata_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Metadata Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>API_Name__c</columns>
        <columns>Metadata_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Parent_Metadata_Component__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Deleted</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>API_Name__c</columns>
        <columns>Metadata_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Parent_Metadata_Component__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Deleted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Deleted</label>
    </listViews>
    <listViews>
        <fullName>Metadata_Type_Component</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>API_Name__c</columns>
        <columns>Metadata_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Parent_Metadata_Component__c</columns>
        <columns>Is_Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Metadata_Type__c</field>
            <operation>equals</operation>
            <value>Aura Component Bundle,Lightning Web Component Bundle</value>
        </filters>
        <label>Metadata Type = Component</label>
    </listViews>
    <listViews>
        <fullName>Metadata_Type_Custom_Field</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>API_Name__c</columns>
        <columns>Metadata_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Parent_Metadata_Component__c</columns>
        <columns>Is_Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Metadata_Type__c</field>
            <operation>equals</operation>
            <value>Custom Field</value>
        </filters>
        <label>Metadata Type = Custom Field</label>
    </listViews>
    <listViews>
        <fullName>Metadata_Type_Custom_Object</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>API_Name__c</columns>
        <columns>Metadata_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Parent_Metadata_Component__c</columns>
        <columns>Is_Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Metadata_Type__c</field>
            <operation>equals</operation>
            <value>Custom Object</value>
        </filters>
        <label>Metadata Type = Custom Object</label>
    </listViews>
    <listViews>
        <fullName>Metadata_Type_Flow</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>API_Name__c</columns>
        <columns>Metadata_Type__c</columns>
        <columns>Category__c</columns>
        <columns>Parent_Metadata_Component__c</columns>
        <columns>Is_Deleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Metadata_Type__c</field>
            <operation>equals</operation>
            <value>Flow,Flow Definition</value>
        </filters>
        <label>Metadata Type = Flow</label>
    </listViews>
    <nameField>
        <label>Metadata Component</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>